--- a/swiper2/style.css
+++ b/swiper2/style.css
@@ -22,6 +22,13 @@ body {
   user-select: none;
 }
 
+@media screen and (max-width: 720px) {
+  .swiperbox {
+    width: 100%;
+    height: 240px;
+  }
+}
+
 .swiperitem {
   width: inherit;
   height: inherit;
