--- a/loading/style.css
+++ b/loading/style.css
@@ -43,6 +43,7 @@ body {
 
 .text {
   position: absolute;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 600;
   color: rgb(215, 241, 255);
